Modify code for UIUMS dataset and CPU

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -3,9 +3,9 @@ training:
   # Experiment id to use in logging and checkpoints
   experiment_id: null
   # Maximum number of epochs
-  epochs: 300
+  epochs: 1
   # Device to be used to train the model. Can be "cuda" or "cpu"
-  device: cuda
+  device: cpu
   # Optimizer configuration
   optimizer: adam
   # Learning rate
