--- a/configs/datasets/dataset.yaml
+++ b/configs/datasets/dataset.yaml
@@ -1,5 +1,6 @@
 dataset_config:
-  dataset_name: "audiocaption"
+  dataset_name: "uiums_dataset"
+  device: 'cpu'
   data_dir: ${env.data_root}/datasets/${dataset_config.dataset_name}
   # Caption configs
   captions:
