--- a/configs/datasets/dataset.yaml
+++ b/configs/datasets/dataset.yaml
@@ -1,6 +1,6 @@
 dataset_config:
-  dataset_name: "uiums_dataset"
-  device: 'cpu'
+  dataset_name: "uimis_dataset"
+  device: 'cuda'
   data_dir: ${env.data_root}/datasets/${dataset_config.dataset_name}
   # Caption configs
   captions:
