--- a/configs/models/cnn_lstm_caption.yaml
+++ b/configs/models/cnn_lstm_caption.yaml
@@ -1,6 +1,6 @@
  model_config: 
   model_name: cnn_lstm_caption
-  device: 'cpu'
+  device: 'cuda'
   fusion: early
   loss: cross_entropy
   # Feature Extraction
